manifests/infra/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: main-gateway
  namespace: gateway
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  gatewayClassName: cilium
  listeners:
    - name: https
      hostname: "*.tgy.io"
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: tgy-io-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: http
      hostname: "*.tgy.io"
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
